# robocomp-insight

./: .gitignore  README.md  description.md  insight.repos  insight_config.json  insight_config_sim.json  requirements.txt
agents/bullshit_publisher/: CMakeLists.txt  DoxyFile  README.md  bullshit_publisher.cdsl  insight_dsr.json
agents/bullshit_publisher/etc/: config  config.toml
agents/bullshit_publisher/src/: agent_generator.py  agent_generator.ui  bullshit_publisher.ui  mainUI.ui  specificworker.cpp  specificworker.h
agents/concept_bottle/: CMakeLists.txt  DoxyFile  README.md  concept_bottle.cdsl
agents/concept_bottle/etc/: config  config.toml  config_sim
agents/concept_bottle/src/: CMakeLists.txt  PointsViewer.h  mainUI.ui  specificworker.cpp  specificworker.h
agents/concept_person/: CMakeLists.txt  DoxyFile  README.md  concept_person.cdsl
agents/concept_person/etc/: config  config.toml  config_sim
agents/concept_person/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.h
agents/concept_robot/: CMakeLists.txt  DoxyFile  README.md  concept_robot.cdsl
agents/concept_robot/etc/: config  config.toml  config_sim
agents/concept_robot/src/: mainUI.ui  specificworker.cpp  specificworker.h
agents/episodic_memory/: API_REFERENCE.md  CMakeLists.txt  DoxyFile  README.md  README_API.md  episodic_dsr.json  episodic_memory.cdsl  keyframes_and_changes.txt  mission.txt  only_keyframes.txt  root_dsr.json
agents/episodic_memory/documentation/: API_REFERENCE.md
agents/episodic_memory/etc/: config  config.toml
agents/episodic_memory/python/: CMakeLists.txt  __init__.py  example_usage.py  python_binding.cpp
agents/episodic_memory/recorded_missions/: mission_Follow Path_20260319_122446.txt  mission_Follow Path_20260319_135925.txt  mission_Follow Path_20260319_141254.txt  mission_Navigation_20260319_122521.txt  mission_intention_03d4428e73-000-001_20260319_122536.txt  mission_intention_03d442c506-000-001_20260319_122758.txt
agents/episodic_memory/src/: CMakeLists.txt  DSRDecoder.h  DSRTypeTrait.h  dsr_episodic_api.cpp  dsr_episodic_api.h  historic_debugger.ui  historic_manager.h  mainUI.ui  specificworker.cpp  specificworker.h  test_api.h  test_decoder.h
agents/fake_castilla_la_mancha/: CMakeLists.txt  README.md  fake_castilla_la_mancha.cdsl
agents/fake_castilla_la_mancha/etc/: config
agents/fake_castilla_la_mancha/src/: CMakeLists.txt  mainUI.ui  specificworker.py  (+1 more)
agents/fake_malaga/: CMakeLists.txt  README.md  fake_malaga.cdsl
agents/inner_simulator/: CMakeLists.txt  README.md  causes.json  causes.json.example  inner_simulator.cdsl  output.txt  retry.sh  sim_output.json
agents/mission_controller/: CMakeLists.txt  README.md  insight_dsr.json  insight_dsr_copy.json  keyframes_and_changes.txt  mission_controller.cdsl  root_dsr.json
agents/semantic/: CMakeLists.txt  README.md  semantic.cdsl
agents/vision_sam/: CMakeLists.txt  README.md  vision_sam.cdsl
etc/: intervention_catalog.json
tests/offline/: README.md  test_blueprint_grounding.py  test_hypothesis_compiler.py  test_validator.py  test_verdict_ground_truth.py
(+126 files in other folders)
